# pytorch-test

./: hello.py  pyproject.toml  renovate.json
.github/workflows/: test.yaml
